--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ img{
     display: block;
     border-radius: 50%;
     padding-top: 15px;
+    width: 170px;
+    height: 170px;
+    object-fit: cover;
+    object-position: top;
 }
 
 body {
@@ -81,5 +85,17 @@ body {
 
 .attribution{
     color: #fff;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
+}
+
+.chal{
+    color: #fff;
+    background-color: hsl(0, 0%, 12%);
+    border-radius: 10px;
+}
+
+.chal:hover{
+    background-color: hsl(75, 94%, 57%);
+    color: #fff;
+    border-radius: 5px;
 }
